 - Fixed Issue 306 & 304 - Updated Fibaro FGMS Config File (Justin)
 - Fixed Issue 308 - Add Zenzhou TZ65D Dual Wall Dimmer (Justin)
 - Fixed Issue 309 - Add Config File for ZWave.Me Flush Mountable Switch (Justin)
 - Fixed Issue 311 - Add Vision Siren (Justin)
 - Fixed Issue 314 - Updated Fibaro RGBW Config File (Justin)
 - Fixed Issue 318 - Updated Fibaro Wall Plug Config File (Justin)
 - Fixed Issue 321 - Updated Fibaro FGRM222 Config File (Justin)
 - Fixed Issue 324 - New Config file for Aeon Labs MiniMote (Justin)
 - Added ZWave.Me iTemp Config file thanks to Willem Burgers (Justin)
 - Added new id for Aeon Labs Micro Smart Engergy Illuminator G2 thanks to
   jmeyer (Justin)
 - Fixed Issue 329 - Update Fibaro FGD211 Config File (Alex)
 - Fixed Issue 330 - Update Fibaro FGS211 Config File (Alex)
 - Fixed Issue 331 - Update Fibaro RGBWM441 Config File (Alex)
 - Add new id for GE Duplex Receptacle (Alex) 
 - Add 18 new ids for Vision devices (Alex)
 - Add Device Qees RETO Plug-in Switch Plus Config File (Alex)
 - Implement DoorLockLogging Command Class (Justin)
 - Implement Security Command Class (Justin)
 - Add a additional ID for Vision ZM1701 Deadbolt without Handle (Justin)
 - Add a ID and Config file for Assa Abloy Real Living Cap-Touch Deadbolt
   (Justin)
 - Implement the TimeParameters Command Class (Justin)
 - Fix up AssumeAwake Option for the Wakeup Class (Justin)
 - Update BeNext Tag Reader Config File (Alex)
 - Fixed Issue 335 - Update zwave.me KeyFob Config File (Alex)
 - Fixed Issue 336 - Update Aeon Labs DoorSensor Config File (Alex)
 - Fixed Issue 337 - Update Aeon Labs Multi Sensor Config File (Alex)
 - Fixed Issue 338 - Update Aeon Labs Multi Sensor Config File (Alex)
 - Fixed Issue 339 - Update Fibaro Door Opening Sensor Config File (Alex)
 - Fixed Issue 340 - Add Remotec ZRC-100 Remote Control (Alex)
 - Fixed Issue 301 - Add Philio PAN04-1 Relay Insert (Alex)
 - Fixed Issue 341 - Corrected directory/filename errors in manufacturer xml (Alex)